<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/wallpaper"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:textColor="@color/putih"
        android:textSize="30sp"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/kittycat"
        android:id="@+id/circleImageView"
        android:layout_marginTop="131dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp" />

    <TextView
        android:id="@+id/mTVnm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namaku"
        android:textColor="@color/putih"
        android:textSize="24sp"
        android:layout_alignTop="@+id/circleImageView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp" />

    <TextView
        android:id="@+id/mTVprof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/profesi"
        android:textColor="@color/putih"
        android:textSize="24sp"
        android:layout_below="@+id/mTVnm"
        android:layout_alignEnd="@+id/mTVnm"
        android:layout_marginEnd="51dp" />

    <TextView
        android:id="@+id/mTVjrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/jurusan"
        android:textColor="@color/putih"
        android:textSize="24sp"
        android:layout_below="@+id/mTVprof"
        android:layout_alignEnd="@+id/mTVnm"
        android:layout_marginEnd="17dp" />

    <TextView
        android:id="@+id/mTVpts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pts"
        android:textColor="@color/putih"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/circleImageView"
        android:layout_alignEnd="@+id/mTVnm" />

    <TextView
        android:id="@+id/mTVcpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor="@color/putih"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />

</RelativeLayout>